@@ -1,12 +1,7 @@
 {
-  "count": 31,
-  "uniques": 19,
+  "count": 30,
+  "uniques": 18,
   "clones": [
-    {
-      "timestamp": "2022-08-03T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-08-06T00:00:00Z",
       "count": 1,
